# Initial-Image-Acquisition

./: .gitignore  CMakeLists.txt  README.md  main.cpp
