cmake_minimum_required(VERSION 3.16.3)
project(init_img_acq)
find_package(OpenCV REQUIRED)
find_package(ZLIB REQUIRED)
set(VIMBAX_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/VimbaX_2023-1)
set(XLSXWRITER_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/libxlsxwriter)
add_executable(init_img_acq main.cpp)
target_compile_options(init_img_acq PRIVATE -std=c++17 -ggdb3)
include_directories(${OpenCV_INCLUDE_DIRS})
target_include_directories(init_img_acq PRIVATE ${VIMBAX_DIR}/api/include ${XLSXWRITER_LIB}/include)
target_link_libraries(init_img_acq PRIVATE ${VIMBAX_DIR}/api/lib/libVmbCPP.so ${XLSXWRITER_LIB}/cmake/libxlsxwriter.a ${ZLIB_LIBRARIES} ${OpenCV_LIBS})